--- a/pages/cv.html
+++ b/pages/cv.html
@@ -98,7 +98,66 @@
                 <div class="form--message"></div>
             </main>
         </div>
-        <div class="right"></div>
+        <div class="right">
+            <div class="personal-info">
+                <div class="personal-info_left">
+                    <div id="fullName" class="fullname">
+                        <div id="firstname" class="firstname"></div>
+                        <div id="lastname" class="lastname"></div>
+                    </div>
+                    <div class="contacts">
+                        <div class="contact-email">
+                            <img src="../assets/icons/Vector.png" width="20" height="20" alt="email">
+                            <div id="mail"></div>
+                        </div>
+                        <div class="contact-phone">
+                            <img src="../assets/icons/phone.png" width="20" height="20" alt="phone">
+                            <div id="telephone"></div>
+                        </div>
+                    </div>
+                    <div class="about-creator">
+                        <div class="creator-title">
+                            ᲩᲔᲛ ᲨᲔᲡᲐᲮᲔᲑ
+                        </div>
+                        <div id="creatorInfo" class="creator-info">
+                        </div>
+                    </div>
+                </div>
+                <div class="personal-info_right">
+                    <img src="../assets/images/Rectangle 9.png" alt="user image">
+                </div>
+            </div>
+            <div class="creator-experience">
+                <div class="experience-title title">
+                    ᲒᲐᲛᲝᲪᲓᲘᲚᲔᲑᲐ
+                </div>
+                <div class="experience-in" style="display: flex;">
+                    <div id="knowledge"></div>, <div id="company"></div>
+                </div>
+                <div class="experience-in_date">
+                    <div id="startDate"></div> - <div id="endDate"></div>
+                </div>
+                <div class="about-experiance" id="experianceDesc">
+                </div>
+            </div>
+            <div class="creator-education">
+                <div class="education-title title">
+                    ᲒᲐᲜᲐᲗᲚᲔᲑᲐ
+                </div>
+                <div class="education-place" id="eduPlace">
+                    წმ. ანდრიას საპატრიარქოს სასწავლებელი, სტუდენტი
+                </div>
+                <div class="graduation-of-education">
+                    2020-09-09
+                </div>
+                <div class="about-education">
+                    ვსწავლობდი გულმოდგინეთ. მყავდა ფრიადები. რაც შემეძლო — ვქენი. 
+                    კომპიუტერები მიყვარდა. ვიჯექი ჩემთვის, ვაკაკუნებდი ამ კლავიშებზე. 
+                    მეუნებოდნენ — დაჯექი, წაიკითხე რამე, რას აკაკუნებ, დრო მოვა და ჩაგიკაკუნებსო. 
+                    აჰა, მოვიდა დრო და ვერა ვარ დეველოპერი?
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./js/script.js"></script>
